devops/deployment/app/latency/overlay/local/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: latency
  annotations:
    nginx.ingress.kubernetes.io/server-alias: ~^latency.*\.coder\.totvs\.dev$
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  rules:
    - host: latency.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: latency
                port:
                  name: http
